cmake_minimum_required (VERSION 3.0)

set(INTERCEPT_EXAMPLE_NAME "aps_demo")

add_definitions(/DINTERCEPT_NO_THREAD_SAFETY)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/rv/${INTERCEPT_EXAMPLE_NAME}/intercept")

file(GLOB INTERCEPT_EXAMPLE_SOURCES *.h *.hpp *.c *.cpp)

SOURCE_GROUP("src" FILES ${INTERCEPT_EXAMPLE_SOURCES})


add_library( ${INTERCEPT_EXAMPLE_NAME} SHARED ${INTERCEPT_EXAMPLE_SOURCES})

include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${INTERCEPT_INCLUDE_PATH})
if(INTERCEPT_LIB_INCLUDED)
    target_link_libraries(${INTERCEPT_EXAMPLE_NAME} intercept_client ${LINK_LIBS})
endif()
if(NOT INTERCEPT_LIB_INCLUDED)
    target_link_libraries(${INTERCEPT_EXAMPLE_NAME} ${INTERCEPT_LIB_PATH})
endif()


target_link_libraries(${INTERCEPT_EXAMPLE_NAME} ${LINK_LIBS})
set_target_properties(${INTERCEPT_EXAMPLE_NAME} PROPERTIES PREFIX "")
set_target_properties(${INTERCEPT_EXAMPLE_NAME} PROPERTIES FOLDER examples)
set_target_properties(${INTERCEPT_EXAMPLE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${INTERCEPT_OUTPUT_DIR}/rv/${INTERCEPT_EXAMPLE_NAME}/intercept")
set_target_properties(${INTERCEPT_EXAMPLE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${INTERCEPT_OUTPUT_DIR}/rv/${INTERCEPT_EXAMPLE_NAME}/intercept")
set_target_properties(${INTERCEPT_EXAMPLE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${INTERCEPT_OUTPUT_DIR}/rv/${INTERCEPT_EXAMPLE_NAME}/intercept")
set_target_properties(${INTERCEPT_EXAMPLE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${INTERCEPT_OUTPUT_DIR}/rv/${INTERCEPT_EXAMPLE_NAME}/intercept")
set_target_properties(${INTERCEPT_EXAMPLE_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${INTERCEPT_OUTPUT_DIR}/rv/${INTERCEPT_EXAMPLE_NAME}/intercept")


if(CMAKE_COMPILER_IS_GNUCXX)
	set_target_properties(${INTERCEPT_EXAMPLE_NAME} PROPERTIES LINK_SEARCH_START_STATIC 1)
	set_target_properties(${INTERCEPT_EXAMPLE_NAME} PROPERTIES LINK_SEARCH_END_STATIC 1)
endif()